--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -37,7 +37,7 @@ Last update :
 =======================================*/
 
 /*google fonts*/
-// @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;0,800;0,900;1,400;1,600;1,700&family=Quicksand:wght@400;500;600;700&family=Roboto:wght@400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;0,800;0,900;1,400;1,600;1,700&family=Quicksand:wght@400;500;600;700&family=Roboto:wght@400;500;700;900&display=swap');
 
 // @import 'mixin.scss';
 /* css variables */
@@ -52,6 +52,11 @@ Last update :
     --f-secondary: 'Roboto', sans-serif;
     --f-tertiary : 'Quicksand', sans-serif;
 }
+@font-face {
+    font-family: "Work Sans";
+    src: url(./fonts/Raleway-Bold.ttf) format("truetype");
+    font-weight: 900;
+  }
 @font-face {
     font-family: "Mulish";
     src: url(./fonts/Mulish-Bold.ttf) format("trueType");
