--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -33,6 +33,7 @@ Last update :
 1. Global css start
 =======================================*/
 /*google fonts*/
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&family=Mulish:wght@400;500;600;700;800;900&family=Raleway:wght@400;500;600;700;800;900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,800&display=swap");
 /* css variables */
 :root {
   /*color variables*/
