--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -34,7 +34,6 @@ Last update :
 1. Global css start
 =======================================*/
 /*google fonts*/
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;0,800;0,900;1,400;1,600;1,700&family=Quicksand:wght@400;500;600;700&family=Roboto:wght@400;500;700;900&display=swap");
 /* css variables */
 :root {
   /*color variables*/
@@ -48,98 +47,148 @@ Last update :
 }
 
 @font-face {
-  font-family: "Work Sans";
-  src: url(./fonts/Raleway-Bold.ttf) format("truetype");
-  font-weight: 900;
+  font-family: "Roboto";
+  src: url(../fonts/Roboto-Bold.ttf) format("truetype");
+  font-weight: 700;
 }
 @font-face {
-  font-family: "Mulish";
-  src: url(./fonts/Mulish-Bold.ttf) format("trueType");
+  font-family: "Roboto";
+  src: url(../fonts/Roboto-Medium.ttf) format("truetype");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url(../fonts/Roboto-Regular.ttf) format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Nunito";
+  src: url(../fonts/Nunito-Bold.ttf) format("truetype");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Nunito";
+  src: url(../fonts/Nunito-SemiBold.ttf) format("truetype");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Nunito";
+  src: url(../fonts/Nunito-Medium.ttf) format("truetype");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Nunito";
+  src: url(../fonts/Nunito-Regular.ttf) format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Quicksand";
+  src: url(../fonts/Quicksand-Bold.ttf) format("truetype");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Quicksand";
+  src: url(../fonts/Quicksand-SemiBold.ttf) format("truetype");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Quicksand";
+  src: url(../fonts/Quicksand-Medium.ttf) format("truetype");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Quicksand";
+  src: url(../fonts/Quicksand-Regular.ttf) format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Quicksand";
+  src: url(../fonts/Quicksand-Bold.ttf) format("truetype");
   font-weight: 700;
 }
 @font-face {
   font-family: "Mulish";
-  src: url(./fonts/Mulish-Bold.ttf) format("trueType");
+  src: url(../fonts/Mulish-Bold.ttf) format("trueType");
   font-weight: 700;
 }
 @font-face {
   font-family: "Mulish";
-  src: url(./fonts/Mulish-SemiBold.ttf) format("trueType");
+  src: url(../fonts/Mulish-SemiBold.ttf) format("trueType");
   font-weight: 600;
 }
 @font-face {
   font-family: "Mulish";
-  src: url(./fonts/Mulish-Medium.ttf) format("trueType");
+  src: url(../fonts/Mulish-Medium.ttf) format("trueType");
   font-weight: 500;
 }
 @font-face {
   font-family: "Mulish";
-  src: url(./fonts/Mulish-Regular.ttf) format("trueType");
+  src: url(../fonts/Mulish-Regular.ttf) format("trueType");
   font-weight: 400;
 }
 @font-face {
   font-family: "Rubik";
-  src: url(./fonts/Rubik-Bold.ttf) format("trueType");
+  src: url(../fonts/Rubik-Bold.ttf) format("trueType");
   font-weight: 700;
 }
 @font-face {
   font-family: "Rubik";
-  src: url(./fonts/Rubik-SemiBold.ttf) format("trueType");
+  src: url(../fonts/Rubik-SemiBold.ttf) format("trueType");
   font-weight: 600;
 }
 @font-face {
   font-family: "Rubik";
-  src: url(./fonts/Rubik-Medium.ttf) format("trueType");
+  src: url(../fonts/Rubik-Medium.ttf) format("trueType");
   font-weight: 500;
 }
 @font-face {
   font-family: "Rubik";
-  src: url(./fonts/Rubik-Regular.ttf) format("trueType");
+  src: url(../fonts/Rubik-Regular.ttf) format("trueType");
   font-weight: 400;
 }
 @font-face {
   font-family: "Raleway";
-  src: url(./fonts/Raleway-Bold.ttf) format("trueType");
+  src: url(../fonts/Raleway-Bold.ttf) format("trueType");
   font-weight: 700;
 }
 @font-face {
   font-family: "Raleway";
-  src: url(./fonts/Raleway-SemiBold.ttf) format("trueType");
+  src: url(../fonts/Raleway-SemiBold.ttf) format("trueType");
   font-weight: 600;
 }
 @font-face {
   font-family: "Raleway";
-  src: url(./fonts/Raleway-Medium.ttf) format("trueType");
+  src: url(../fonts/Raleway-Medium.ttf) format("trueType");
   font-weight: 500;
 }
 @font-face {
   font-family: "Raleway";
-  src: url(./fonts/Raleway-Regular.ttf) format("trueType");
+  src: url(../fonts/Raleway-Regular.ttf) format("trueType");
   font-weight: 400;
 }
 @font-face {
   font-family: "Inter";
-  src: url(./fonts/Inter-Bold.ttf) format("trueType");
+  src: url(../fonts/Inter-Bold.ttf) format("trueType");
   font-weight: 700;
 }
 @font-face {
   font-family: "Inter";
-  src: url(./fonts/Inter-SemiBold.ttf) format("trueType");
+  src: url(../fonts/Inter-SemiBold.ttf) format("trueType");
   font-weight: 600;
 }
 @font-face {
   font-family: "Inter";
-  src: url(./fonts/Inter-Medium.ttf) format("trueType");
+  src: url(../fonts/Inter-Medium.ttf) format("trueType");
   font-weight: 500;
 }
 @font-face {
   font-family: "Inter";
-  src: url(./fonts/Inter-Regular.ttf) format("trueType");
+  src: url(../fonts/Inter-Regular.ttf) format("trueType");
   font-weight: 400;
 }
 @font-face {
   font-family: "Inter";
-  src: url(./fonts/Inter-Light.ttf) format("trueType");
+  src: url(../fonts/Inter-Light.ttf) format("trueType");
   font-weight: 300;
 }
 /*global css*/
