--- a/public/assets/css/style2.scss
+++ b/public/assets/css/style2.scss
@@ -51,94 +51,157 @@ Last update :
     --ff-rubik : 'Rubik', sans-serif;
     --ff-mulish : 'Mulish', sans-serif;
 }
+// roboto
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto-Bold.ttf) format("truetype");
+    font-weight: 700;
+  }
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto-Medium.ttf) format("truetype");
+    font-weight: 500;
+  }
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto-Regular.ttf) format("truetype");
+    font-weight: 400;
+  }
+
+// nunito
+@font-face {
+    font-family: "Nunito";
+    src: url(../fonts/Nunito-Bold.ttf) format("truetype");
+    font-weight: 700;
+  }
+@font-face {
+    font-family: "Nunito";
+    src: url(../fonts/Nunito-SemiBold.ttf) format("truetype");
+    font-weight: 600;
+  }
+@font-face {
+    font-family: "Nunito";
+    src: url(../fonts/Nunito-Medium.ttf) format("truetype");
+    font-weight: 500;
+  }
+@font-face {
+    font-family: "Nunito";
+    src: url(../fonts/Nunito-Regular.ttf) format("truetype");
+    font-weight: 400;
+  }
+// Quicksand
+@font-face {
+    font-family: "Quicksand";
+    src: url(../fonts/Quicksand-Bold.ttf) format("truetype");
+    font-weight: 700;
+  }
+@font-face {
+    font-family: "Quicksand";
+    src: url(../fonts/Quicksand-SemiBold.ttf) format("truetype");
+    font-weight: 600;
+  }
+@font-face {
+    font-family: "Quicksand";
+    src: url(../fonts/Quicksand-Medium.ttf) format("truetype");
+    font-weight: 500;
+  }
+@font-face {
+    font-family: "Quicksand";
+    src: url(../fonts/Quicksand-Regular.ttf) format("truetype");
+    font-weight: 400;
+  }
+@font-face {
+    font-family: "Quicksand";
+    src: url(../fonts/Quicksand-Bold.ttf) format("truetype");
+    font-weight: 700;
+  }
+// mulis fonts
 @font-face {
     font-family: "Mulish";
-    src: url(./fonts/Mulish-Bold.ttf) format("trueType");
+    src: url(../fonts/Mulish-Bold.ttf) format("trueType");
     font-weight: 700;
 }
 @font-face {
     font-family: "Mulish";
-    src: url(./fonts/Mulish-Bold.ttf) format("trueType");
-    font-weight: 700;
-}
-@font-face {
-    font-family: "Mulish";
-    src: url(./fonts/Mulish-SemiBold.ttf) format("trueType");
+    src: url(../fonts/Mulish-SemiBold.ttf) format("trueType");
     font-weight: 600;
 }
 @font-face {
     font-family: "Mulish";
-    src: url(./fonts/Mulish-Medium.ttf) format("trueType");
+    src: url(../fonts/Mulish-Medium.ttf) format("trueType");
     font-weight: 500;
 }
 @font-face {
     font-family: "Mulish";
-    src: url(./fonts/Mulish-Regular.ttf) format("trueType");
+    src: url(../fonts/Mulish-Regular.ttf) format("trueType");
     font-weight: 400;
 }
+// rubik font
 @font-face {
     font-family: "Rubik";
-    src: url(./fonts/Rubik-Bold.ttf) format("trueType");
+    src: url(../fonts/Rubik-Bold.ttf) format("trueType");
     font-weight: 700;
 }
 @font-face {
     font-family: "Rubik";
-    src: url(./fonts/Rubik-SemiBold.ttf) format("trueType");
+    src: url(../fonts/Rubik-SemiBold.ttf) format("trueType");
     font-weight: 600;
 }
 @font-face {
     font-family: "Rubik";
-    src: url(./fonts/Rubik-Medium.ttf) format("trueType");
+    src: url(../fonts/Rubik-Medium.ttf) format("trueType");
     font-weight: 500;
 }
 @font-face {
     font-family: "Rubik";
-    src: url(./fonts/Rubik-Regular.ttf) format("trueType");
+    src: url(../fonts/Rubik-Regular.ttf) format("trueType");
     font-weight: 400;
 }
+// Raleway font
 @font-face {
     font-family: "Raleway";
-    src: url(./fonts/Raleway-Bold.ttf) format("trueType");
+    src: url(../fonts/Raleway-Bold.ttf) format("trueType");
     font-weight: 700;
 }
 @font-face {
     font-family: "Raleway";
-    src: url(./fonts/Raleway-SemiBold.ttf) format("trueType");
+    src: url(../fonts/Raleway-SemiBold.ttf) format("trueType");
     font-weight: 600;
 }
 @font-face {
     font-family: "Raleway";
-    src: url(./fonts/Raleway-Medium.ttf) format("trueType");
+    src: url(../fonts/Raleway-Medium.ttf) format("trueType");
     font-weight: 500;
 }
 @font-face {
     font-family: "Raleway";
-    src: url(./fonts/Raleway-Regular.ttf) format("trueType");
+    src: url(../fonts/Raleway-Regular.ttf) format("trueType");
     font-weight: 400;
 }
+// inter fonts
 @font-face {
     font-family: "Inter";
-    src: url(./fonts/Inter-Bold.ttf) format("trueType");
+    src: url(../fonts/Inter-Bold.ttf) format("trueType");
     font-weight: 700;
 }
 @font-face {
     font-family: "Inter";
-    src: url(./fonts/Inter-SemiBold.ttf) format("trueType");
+    src: url(../fonts/Inter-SemiBold.ttf) format("trueType");
     font-weight: 600;
 }
 @font-face {
     font-family: "Inter";
-    src: url(./fonts/Inter-Medium.ttf) format("trueType");
+    src: url(../fonts/Inter-Medium.ttf) format("trueType");
     font-weight: 500;
 }
 @font-face {
     font-family: "Inter";
-    src: url(./fonts/Inter-Regular.ttf) format("trueType");
+    src: url(../fonts/Inter-Regular.ttf) format("trueType");
     font-weight: 400;
 }
 @font-face {
     font-family: "Inter";
-    src: url(./fonts/Inter-Light.ttf) format("trueType");
+    src: url(../fonts/Inter-Light.ttf) format("trueType");
     font-weight: 300;
 }
 $primary-color: #000915;
